<resources>
    <string name="app_name">XinXian</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="abc">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sweets_dairy"><![CDATA[Sweets & Dairy]]></string>
    <string name="breads_bakery"><![CDATA[Breads & Bakery]]></string>
    <string name="fruits_vegetables"><![CDATA[Fruits & Vegetables]]></string>
    <string name="fashion_life_style"><![CDATA[Fashion & Life Style]]></string>
    <string name="hardware_electronics"><![CDATA[Hardware & Electronics]]></string>
</resources>
